--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,22 +3,6 @@
 @tailwind utilities;
 
 /* General Sans */
-@font-face {
-  font-family: 'GeneralSans';
-  src: url('/public/fonts/GeneralSans/GeneralSans-Regular.woff2') format('woff2');
-}
-@font-face {
-  font-family: 'GeneralSans-Italic';
-  src: url('/public/fonts/GeneralSans/GeneralSans-Italic.woff2') format('woff2');
-}
-@font-face {
-  font-family: 'GeneralSans-Medium';
-  src: url('/public/fonts/GeneralSans/GeneralSans-Medium.woff2') format('woff2');
-}
-@font-face {
-  font-family: 'GeneralSans-MediumItalic';
-  src: url('/public/fonts/GeneralSans/GeneralSans-MediumItalic.woff2') format('woff2');
-}
 
 
 :root {
@@ -26,6 +10,7 @@
   /* Colors */
   --primary: #FFF4E4;
   --secondary: #FF7A41;
+  --tertiary: #2A2B2A;
 
   /* Fonts */
   --h1: clamp(2.5rem, 6vw + 0.5rem, 3.81rem);
@@ -38,7 +23,6 @@
   --b2: clamp(0.6rem, 1.5vw + 0.5rem, 0.81rem);
   --b3: clamp(0.4rem, 1vw + 0.5rem, 0.62rem);
   --title: clamp(3rem, 8vw + 0.5rem, 5.9rem);
-
 }
 
 body {
@@ -46,8 +30,10 @@ body {
   margin: 0;
   padding: 0;
   background-color: var(--primary);
+  font-family: 'General Sans', sans-serif;
 }
 
-*{
+
+{
   border: 1px solid red;;
 }
