--- a/src/components/NavBar/NavBar.module.css
+++ b/src/components/NavBar/NavBar.module.css
@@ -1,13 +1,25 @@
 .header{
-    width: 100vw;
+    width: 100%;
     position: fixed;
     top: 0;
     left: 0;
+    display: flex;
+    padding-left: 5vw;
+    padding-right: 5vw;
+    padding-top: 1.5vh;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    @media screen and (max-width: 768px){
+        flex-direction: column;
+    }
 }
 
+
 .logo{
-    color: var(--secondary);
+    padding-top: 2vh;
 }
+
 
 
 
