--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,3 +1,24 @@
+.header{
+    width: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: flex;
+    padding-left: 5vw;
+    padding-right: 5vw;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    @media screen and (max-width: 768px){
+        flex-direction: column;
+    }
+}
+
+
+.logo{
+    padding-top: 2vh;
+}
+
 
 .searchbar{
     width: max-content;
@@ -23,3 +44,6 @@
     cursor: pointer;
     width: 2rem;
 }
+
+
+
