--- a/src/components/NavBar/NavBar.module.css
+++ b/src/components/NavBar/NavBar.module.css
@@ -10,6 +10,7 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
+    background-color: var(--primary);
     @media screen and (max-width: 768px){
         flex-direction: column;
     }
@@ -21,6 +22,31 @@
     padding-top: 2vh;
 }
 
+
+.searchbar{
+    width: max-content;
+    display: flex;
+    align-self: center;
+    padding: 0.5rem 1.15rem 0.5rem 0.5rem;
+    border-radius: 5rem;
+    border: 3px solid var(--secondary);
+}
+
+.input{
+    background-color: transparent;
+    border: none;
+    outline: none;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    border-radius: .5rem;
+    color: var(--tertiary);
+}
+
+.searchicon{
+    color: var(--secondary);
+    cursor: pointer;
+    width: 2rem;
+}
 
 
 
