--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -3,9 +3,9 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100vh;
     padding: 0 20px;
     text-align: left;
+    height: auto;
     background-color: var(--primary);
     color: var(--secondary);
 }
@@ -49,3 +49,59 @@
     text-indent: -2em; 
     padding-right: 1em;  
   }
+
+  .header{
+    width: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: flex;
+    padding-left: 5vw;
+    padding-right: 5vw;
+    padding-top: 1.5vh;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    background-color: var(--primary);
+    @media screen and (max-width: 768px){
+        flex-direction: column;
+    }
+    
+}
+
+
+.logo{
+    padding-top: 2vh;
+}
+
+
+.searchbar{
+    width: max-content;
+    display: flex;
+    align-self: center;
+    padding: 0.5rem 1.15rem 0.5rem 0.5rem;
+    border-radius: 5rem;
+    border: 3px solid var(--secondary);
+}
+
+.input{
+    background-color: transparent;
+    border: none;
+    outline: none;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    border-radius: .5rem;
+    color: var(--tertiary);
+}
+
+.searchicon{
+    color: var(--secondary);
+    cursor: pointer;
+    width: 2rem;
+}
+
+
+
+
+
+  
