--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -9,8 +9,13 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
+    background-color: var(--primary);
+    border-radius:   0 0 2rem 2rem;
+    box-shadow: 0 2px 4px rgba(255, 184, 143, 0.2);
+    padding-bottom: .5rem;
     @media screen and (max-width: 768px){
         flex-direction: column;
+        padding-bottom: 2rem;
     }
 }
 
@@ -44,6 +49,4 @@
     cursor: pointer;
     width: 2rem;
 }
-
-
 
