--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -67,7 +67,7 @@
 
 .maintext ol li {
     font-size: var(--s-h1);
-    color: var(--secondary);
+    color: var(--tertiary);
     text-align: left;
     width: 90%;
 }
@@ -100,6 +100,7 @@
     flex-direction: row;
     padding: 2rem;
     border-radius: 2rem;
+    color: var(--tertiary);
     @media screen and (max-width: 768px){
         flex-direction: column;
         
@@ -108,10 +109,12 @@
 
 .left h2{
     font-size: var(--h2);
+    color: var(--secondary);
 }
 
 .right h2{
     font-size: var(--h2);
+    color : var(--secondary);
 
 }
 
@@ -124,10 +127,12 @@
     flex-direction: column;
     padding: 2rem;
     border-radius: 2rem;
+    color: var(--tertiary);
 }
 
 .container2 h2{
     font-size: var(--h2);
+    color: var(--secondary);
 
     @media screen and (max-width: 768px){
         text-align: center;
@@ -138,6 +143,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    gap: 1rem;
     @media screen and (max-width: 768px){
         flex-direction: column;
         
@@ -145,11 +151,9 @@
 }
 
 .weathercontainer{
-    border: ;
     display: flex;
     flex-direction: column;
     @media screen and (max-width: 768px){
-        flex-direction: row;
         justify-content: space-between;
         padding: 1rem;
     }
