--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -32,6 +32,7 @@
     padding: 0.5rem 1.15rem 0.5rem 0.5rem;
     border-radius: 5rem;
     border: 3px solid var(--secondary);
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); 
 }
 
 .input{
