--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -101,6 +101,7 @@
     padding: 2rem;
     border-radius: 2rem;
     color: var(--tertiary);
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); 
     @media screen and (max-width: 768px){
         flex-direction: column;
         
@@ -128,6 +129,7 @@
     padding: 2rem;
     border-radius: 2rem;
     color: var(--tertiary);
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); 
 }
 
 .container2 h2{
@@ -144,6 +146,7 @@
     flex-direction: row;
     justify-content: space-between;
     gap: 1rem;
+    overflow-x: auto;
     @media screen and (max-width: 768px){
         flex-direction: column;
         
@@ -153,8 +156,10 @@
 .weathercontainer{
     display: flex;
     flex-direction: column;
+    padding: 1rem;
+    border-radius: 1rem;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); 
     @media screen and (max-width: 768px){
         justify-content: space-between;
-        padding: 1rem;
     }
 }
