--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -23,14 +23,6 @@
     }
 }
 
-.scroll::-webkit-scrollbar {
-    width: 0.5em;
-    background-color: transparent;
-}
-
-.scroll::-webkit-scrollbar-thumb {
-    background-color: transparent;
-}
 
 .footer {
     color: var(--secondary);
@@ -141,15 +133,34 @@
     }
 }
 
-.fiveboxes{
+.fiveboxes {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     gap: 1rem;
     overflow-x: auto;
-    @media screen and (max-width: 768px){
+    padding: .5rem;
+    scrollbar-color: var(--secondary) var(--primary);
+    scrollbar-width: thin;
+}
+
+.fiveboxes::-webkit-scrollbar {
+    width: 3px;
+}
+
+.fiveboxes::-webkit-scrollbar-track {
+    background-color: var(--primary);
+}
+
+.fiveboxes::-webkit-scrollbar-thumb {
+    background-color: var(--secondary);
+    border-radius: 5px;
+    width: 8px;
+}
+
+@media screen and (max-width: 768px) {
+    .fiveboxes {
         flex-direction: column;
-        
     }
 }
 
@@ -159,7 +170,12 @@
     padding: 1rem;
     border-radius: 1rem;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); 
+    min-width: 250px;
     @media screen and (max-width: 768px){
         justify-content: space-between;
     }
+}
+.weathercontainer:hover {
+    background-color: #FFECCF;
+    transition: ease-in-out 0.2s;
 }
